# arrowflight

./: .gitignore  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  default_results.csv  pyproject.toml  requirements.txt  results.csv  third_party_licenses.md
.github/workflows/: release.yml
Code/: flug.py
arrowflight/: __init__.py  _version.py  calc_profile_results.py  flight.py  flight_compute.py  flight_plot.py  flight_profiles.py  plot_profile_results.py
source/: arrows.json  calc_profile_results.py  compute.py  flight.py  flight_compute.py  flight_constants.py  flight_profiles.py  flug.py  plot.py  plot_profile_results.py  results.csv
